/*
 * Build file for The Very Slow Jython Project.
 *
 * This is a multi-project build.
 */


plugins {
    id 'maven-publish'
}


description = 'Very Slow Jython'
group = 'uk.co.farowl'
version = '0.3.0-SNAPSHOT'


allprojects {
    apply plugin: 'java'
    sourceCompatibility = '11'
    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    repositories {
        mavenLocal()
        mavenCentral()
    }
}



